# ChangeLog for app-text/acroread
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/acroread/ChangeLog,v 1.124 2009/04/08 19:14:56 keytoaster Exp $

  08 Apr 2009; Tobias Heinlein <keytoaster@gentoo.org>
  acroread-8.1.4.ebuild:
  amd64 stable wrt security bug #259992

*acroread-9.1.0 (06 Apr 2009)
*acroread-8.1.4 (06 Apr 2009)

  06 Apr 2009; Timo Gurr <tgurr@gentoo.org> -acroread-8.1.2-r3.ebuild,
  +acroread-8.1.4.ebuild, +acroread-9.1.0.ebuild:
  Version bump wrt security bug #259992. Also incorporates suggestion from
  bug #253059, thanks to Keith Gable. Remove old.

  08 Nov 2008; Markus Meier <maekke@gentoo.org> acroread-8.1.3.ebuild:
  x86 stable, bug #225483

  06 Nov 2008; Tobias Heinlein <keytoaster@gentoo.org>
  acroread-8.1.3.ebuild:
  amd64 stable, security bug #225483

*acroread-8.1.3 (06 Nov 2008)

  06 Nov 2008; Timo Gurr <tgurr@gentoo.org> -acroread-8.1.2-r2.ebuild,
  +acroread-8.1.3.ebuild:
  Version bump. This version addresses many security issues, see bug
  #225483. Also fixing bug #237376 and bug #237639, thanks Pacho Ramos for
  the diff.

  05 Oct 2008; Raúl Porcel <armin76@gentoo.org> acroread-8.1.2-r2.ebuild,
  acroread-8.1.2-r3.ebuild:
  Explain why mozilla-firefox-bin can't be used as a RDEPEND

  03 Aug 2008; Markus Ullmann <jokey@gentoo.org> acroread-8.1.2-r3.ebuild:
  Stable on x86 wrt security bug #233383

  03 Aug 2008; Tobias Heinlein <keytoaster@gentoo.org>
  acroread-8.1.2-r3.ebuild:
  amd64 stable wrt security bug #233383

*acroread-8.1.2-r3 (01 Aug 2008)

  01 Aug 2008; Timo Gurr <tgurr@gentoo.org> -acroread-8.1.2.ebuild,
  -acroread-8.1.2-r1.ebuild, +acroread-8.1.2-r3.ebuild:
  Bump for Adobe Reader 8.1.2 Security Update 1, fixing security issue
  CVE-2008-2641 bug #233383. Remove older versions.

  27 Apr 2008; Markus Meier <maekke@gentoo.org> acroread-8.1.2-r2.ebuild:
  amd64/x86 stable, bug #219207

*acroread-8.1.2-r2 (29 Mar 2008)
