@@ -18,6 +18,6 @@ DIST AdobeReader_ptb-8.1.3-1.i486.tar.bz2 49598922 RMD160 2721800e493a453b5c2710
 DIST AdobeReader_suo-8.1.3-1.i486.tar.bz2 49681666 RMD160 69be61196f603cb88276ad6172543cb21dae60cf SHA1 9dd20550d95c9ba5d6188b6e679ae2f46e2b52f3 SHA256 6c06b7dea872bd3ce625a5d7ecb607ab8b981c2209e137874a2892142d88dcc6
 DIST AdobeReader_sve-8.1.3-1.i486.tar.bz2 50519768 RMD160 3f755791922e9533434e9ab86ed0409ce34d61d5 SHA1 ab1ac2119832aa186dd019e386923f5ec021f721 SHA256 b2a2f9f5ce3cef8d0704961f509cc097d103bb3205e706caff82bc249bdc4eca
 EBUILD acroread-8.1.3.ebuild 8169 RMD160 7e09ae296de8cd74b47de518d5953c8bcaafcbb4 SHA1 dead8d47350310e53292fc98198aefcece83edae SHA256 723e56f41fab36e853b4765cd518223930e8d371b343c0775a55f8cf09e25a81
-EBUILD acroread-9.1.0.ebuild 8017 RMD160 d9e43f92d83abc9426299dc83413948ddaf21d3f SHA1 62a7dee467fbf9cba4fb8ec27397aa4c0e9c2844 SHA256 f14bea54484c25ee322143f85dbe092f7e34098665e59064e95fbdf5881120d6
-MISC ChangeLog 22116 RMD160 bb7745250475abd992fd630c875a3f6e8fc44309 SHA1 7d56530b685d9cf179285dc42214f7301ce59b42 SHA256 f576902941dd449f4a2700851dba0e67c55f1da8442fc23622a6975dfcf8fb57
+EBUILD acroread-9.1.0.ebuild 8028 RMD160 cb24b38e3f15bbce3a739866c0cbc04e382d9951 SHA1 8d9d2d9ffaae6b220209c19b9c3f73b28c3e4c64 SHA256 a5e206e38077d69d032d5adbdad5d1b683dfb10450ec8e23a81d532042c031ed
+MISC ChangeLog 22300 RMD160 ca84211e8dba119bda0bdd129a357d2e29b18f53 SHA1 c95a4e86ab3638c209718d8fec0702a2abef2882 SHA256 97098c2131b919ad7a837ad80eaa547256fa08af1227bd212285bf035603bf6f
 MISC metadata.xml 161 RMD160 1e5b1e42553c8869b93c4a5448e9a2a2ed9fe525 SHA1 209c6a46e4cdd891980115e42ba419e3799f8088 SHA256 7c85e6739a71f5bb23e8de36c88677d772946e61f7285892f7554e37bd2bca76
