@@ -1,6 +1,11 @@
 # ChangeLog for app-text/acroread
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/acroread/ChangeLog,v 1.124 2009/04/08 19:14:56 keytoaster Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/acroread/ChangeLog,v 1.125 2009/04/09 21:35:14 ulm Exp $
+
+  09 Apr 2009; Ulrich Mueller <ulm@gentoo.org> acroread-8.1.4.ebuild,
+  acroread-9.1.0.ebuild:
+  Update elog message about nspluginwrapper, reflecting its move to
+  www-plugins, bug 265569.
 
   08 Apr 2009; Tobias Heinlein <keytoaster@gentoo.org>
   acroread-8.1.4.ebuild:
